# oem

./: .oem.py.swo  .package  .travis.yml  Dockerfile  INSTALL.rst  LICENSE  MANIFEST.in  README.rst  TODO  docker-oem  oem  requirements.txt  setup.cfg
src/oem/: __init__.py  common.py  config.py  db.py  dispatcher.py  field_spec.py  metadata.py  oem.py  oem_config.py  oem_db.py  oem_init.py  oem_rec.py  ooop_utils.py  tmpl.py  xml_id_mgr.py
src/oem/templates/: __openerp__.py.tpl
src/oem/templates/xml/: main.xml.tpl  record.xml.tpl
src/oem/tests/: common.py  test_oem.py  test_oem_config.py  test_oem_init.py
