[metadata]
name = %%name%%
version = %%version%%
summary = %%description%%
description-file =
    README.rst
    CHANGELOG.rst
requires-dist =
    python-dateutil
    ooop
    sact.epoch
    configobj
    lxml
    mako
    cookiecutter>=1.0
    kids.sh>=0.0.6
    kids.cache
    kids.xml
    kids.txt
    kids.data>=0.0.5
    kids.file>=0.0.6
    kids.test
    kids.cmd>=0.0.3
    kids.vcs
    kids.cfg>=0.0.3
    kids.ansi

## sdist info
author = %%author%%
author_email = %%email%%
home_page = http://github.com/0k/%%name%%
classifier =
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Python Modules
    Development Status :: 3 - Alpha
    License :: OSI Approved :: BSD License
    Topic :: Software Development
    Intended Audience :: Developers

[files]
packages-root = src
packages =
    oem
extra_files =
    README.rst
    CHANGELOG.rst
    setup.py
data_files=
    oem/templates =
        src/oem/templates/__openerp__.py.tpl
    oem/templates/xml =
        src/oem/templates/xml/main.xml.tpl
        src/oem/templates/xml/record.xml.tpl

[entry_points]
console_scripts =
    %%name%% = %%name%%:run

[nosetests]
verbosity = 3
with-doctest = 1
doctest-extension = rst
exe = 1
with-coverage = 1
cover-package = oem
#cover-min-percentage = 90
doctest-options = +ELLIPSIS,+NORMALIZE_WHITESPACE
